# CatRange

./: .gitignore  README.md
ablation/: README.md  plot_ablation_results.py  run_ablation.sh  train_catrange_ablation.py
ablation/runs/kcat_esmc_ablation/: ablation_manifest.csv  ablation_summary_mean_pm_std.csv  all_fold_metrics.csv  all_summary_metrics.csv
ablation/runs/km_esmc_ablation/: ablation_manifest.csv  ablation_summary_mean_pm_std.csv  all_fold_metrics.csv  all_summary_metrics.csv
benchmarks/retrained_comparators/: README.md  benchmark_constants.py  benchmark_metrics.py  benchmark_utils.py  build_catpred_protein_records.py  build_realkcat_kcat_benchmark_suite.py  evaluate_benchmark.py  evaluate_benchmark_suite.py  import_realkcat_partitions.py  normalize_catpred.py  normalize_dlkcat.py  notebook_pipeline.py  plot_benchmark_figure.py  plot_publication_single_figures.py  predict_realkcat_suite.py  prepare_benchmark_inputs.py  requirements.txt  run_catpred_holdout.py  run_catpred_retrain_suite.py  run_catpred_suite.py  run_dlkcat_retrain_suite.py  run_dlkcat_suite.py  run_eitlem_suite.py  run_holdout_inference.py  run_unikp_suite.py  suite_partition_utils.py
benchmarks/retrained_comparators/examples/: catpred_kcat_output_example.csv  dlkcat_input_example.tsv  master_kcat_example.csv
catrange_model/: CatRange_env_cpu.yml  CatRange_env_gpu.yml  README.md  pyproject.toml  requirements.txt  requirements_cpu.txt  requirements_gpu.txt  setup.py  train_all.sh
catrange_model/configs/: kcat_esm2.yaml  kcat_esmc.yaml  km_esm2.yaml  km_esmc.yaml
catrange_model/scripts/: __init__.py  cv_train.py  export_final_model_partitions.py  predict.py
catrange_model/src/: __init__.py  config.py  data_pipeline.py  evaluation.py  model_training.py  utils.py
data/catrange_metadata/: DATA_DIRECTORY.md  README.md  final_model_partitions_kcat_esmc_fold5.xlsx
data/raw/: OOD_Neg_hold_test_set.xlsx  PafA_1_curated_v1.csv  PafA_partitions_metadata.xlsx  WT_MD_database_v1_curated_BEFOREmedian_pool.xlsx  WT_MD_database_v1_curated_median_pool.xlsx  WT_MD_database_v1_curated_no_OOD_nodups.xlsx  WT_MD_database_v1_curated_no_OOD_nodups_esmc.xlsx  WT_uniprot_info_1.xlsx  kcat_pairs_summary_from_TestMutant.xlsx
envs/: README.md  catrange-chemberta-gpu.yml  catrange-cpu-figures.yml  catrange-esmc-gpu.yml  catrange-notebooks-gpu.yml
inference/: catrange_inference.py  model_manifest.json  requirements.txt
inference/examples/: demo_pairs.csv
inference/models/: README.md  kcat_esmc_FINAL_stats.pt  km_esmc_FINAL_stats.pt
results/: benchmark_fold_metrics.csv  benchmark_summary_metrics.csv
results/external_benchmarks/: external_benchmark_index.csv
scripts/env/: create_conda_envs.sh  verify_conda_envs.sh
(+175 files in other folders)
