[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catrange"
version = "1.2.0"
description = "Mutation-aware kinetic range prediction for enzymes using CatRange"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Abraham Osinuga", email = "oauife.abraham@gmail.com"}
]
keywords = [
    "bioinformatics",
    "machine-learning",
    "enzyme-engineering",
    "kinetic-parameters",
    "deep-learning",
    "pytorch"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.22.0,<2",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "imbalanced-learn>=0.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "PyYAML>=6.0",
    "pyyaml-include>=1.3",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/TKAI-LAB-Mali/CatRange"
Documentation = "https://github.com/TKAI-LAB-Mali/CatRange"
Repository = "https://github.com/TKAI-LAB-Mali/CatRange.git"
Issues = "https://github.com/TKAI-LAB-Mali/CatRange/issues"

[project.scripts]
catrange-train = "scripts.cv_train:main"
catrange-predict = "scripts.predict:main"
realkcat-train = "scripts.cv_train:main"
realkcat-predict = "scripts.predict:main"

[tool.setuptools]
packages = ["src", "scripts"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
